--- a/style.css
+++ b/style.css
@@ -10,6 +10,85 @@ NavBar
 
 */
 
+@media  screen and (max-width: 500px){
+    li .dropdown{
+        border: 0px;
+        background-color: #FFFFFF;
+        margin-top: 0px;
+        margin-left: -7px;
+      }
+
+      li .dropdown .dropdown-content{
+        position: relative;
+        z-index: 2;
+      }
+
+      li .dropdown button{
+        margin-top: 5px;
+      }
+
+}
+
+button img{
+    transform: scale(0.3);
+    margin-left: -10px;
+}
+
+
+.dropdown {
+    display: inline-block;
+    position: relative;
+    border-radius: 0px;
+  }
+
+  .dropdown-content a{
+   margin-bottom: 10px;
+
+  }
+
+  #navbarSupportedContent ul{
+    margin-top: 10px;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    width: 90%;
+    overflow: auto;
+  }
+
+  .dropdown button{
+    border: 0px;
+    background-color: #ffffff00;
+    margin-top: -8px;
+    color: #0000008c;
+  }
+
+  .dropdown button:hover{
+    border: 0px;
+    background-color: #FFFFFF;
+    margin-top: -8px;
+    color: #000000;
+
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+    background-color: #ffffff;
+    width: 450%;
+    padding: 20px;
+  }
+  .dropdown-content a {
+    display: block;
+    color: #000000;
+    text-decoration: none;
+  }
+  .dropdown-content a:hover {
+    color: #FFFFFF;
+    background-color: #00A4BD;
+    padding: 10px;
+  }
+
 .nav-item{
     margin-right: 120px;
 }
@@ -20,7 +99,7 @@ NavBar
 
 
 .logo{
-    transform: scale(0.3 );
+    transform: scale(0.5 );
 }
 
 /*
@@ -28,6 +107,23 @@ NavBar
 Hero-section
 
 */
+
+@media screen and (max-width: 500px){
+    section #service-container h1{
+            font-size: 2.5em;
+            font-weight: 700;
+        }
+
+    section #service-container{
+        padding-left: 60px;
+        padding-right: 60px;
+        text-align: center;
+        color: white;
+        margin: 0 auto;
+    }
+    
+}
+
 .container h1{
     font-size: 4.5em;
     font-weight: 700;
@@ -55,6 +151,25 @@ Hero-section
 Service Listing section
 
 */
+
+@media screen and (max-width: 500px) {
+    section #service-listing .text-container{
+        width: 95%;
+        padding: 15px;
+        box-shadow:5px 5px 4px rgba(0, 0, 0, 0.25);
+        text-align: left;
+        margin: 0 auto;
+        margin-top: 25px;
+        transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+
+    a .arrow-services-icon{
+        opacity: 0;
+        position: absolute;
+    }
+
+}
+
 #service-container h1{
     margin-bottom: 20px;
     text-align: center;
@@ -152,21 +267,45 @@ contact
 footer
 
 */
+@media screen and (max-width: 500px) {
+    div .contact-info{
+    
+        width: 200px;
+       
+       
+        margin-left: 80px;
+    }
+
+    footer .container .row{
+        width: 100vw;
+    }
+
+    div .row .col .footer-container{
+        margin-left: 70px;
+        padding-top: 70px;
+        width: 200px;
+    }
+}
+
 .footer-section{
     padding-top: 70px;
     padding-bottom: 70px;
     background-color: black;
     color: white;
     margin-top: 50px;
+    width: 100%;
+    
 }
 
 .footer-container{
     margin-left: 120px;
     padding-top: 70px;
     width: 200px;
+
 }
 
 .contact-info{
+    
     width: 200px;
     margin-top: 80px;
     margin-left: 220px;
@@ -182,6 +321,12 @@ footer
 Hero-Section
 
 */
+
+@media screen and (max-width: 500px){
+   body .text-section .container{
+    margin-top: 100px;
+   }
+}
 
 #aboutus-container #container{
     margin-left: 105%;
@@ -218,6 +363,16 @@ Hero-Section
 Text-section
 
 */
+
+@media screen and (max-width: 500px){
+    section #p-container{
+        padding: 10%;
+        padding-bottom: 1%;
+        width: 85%;
+        text-align: justify;
+    }
+}
+
 
 #p-container{
     padding: 10%;
@@ -315,6 +470,44 @@ SCFF Brief Section
 
 */
 
+@media screen and (max-width: 600px){
+    div #value-proposition{
+        background: #66666686;
+        color: white;
+        padding: 50px;
+        width: 100vw;
+        margin-left: -50px;
+        text-align: justify;
+        
+    }
+
+    
+    #brief{
+        padding-top: 50px;
+        padding-bottom: 20px;
+        padding-right: 20px;
+        text-align: justify;
+    }
+
+    div .value-prop-img{
+        position: relative;
+         top: -750px;
+         z-index: -1;
+         margin-left: -50px;
+         max-width: 100vw;
+     }
+
+     .left-image{
+        margin-top: -290px;
+        margin-left: -50px;
+        transform: scale(0.7);
+    }
+    
+    .pitch-img{
+        width: 100vw;
+    }
+}
+
 .scff-brief{
     margin-top: 50px;
     font-size: 18px;
@@ -346,7 +539,7 @@ SCFF Brief Section
     padding-right: 100px;
     width: 140%;
     text-align: justify;
-    text-align: center;
+
 }
 
 #value-proposition p{
@@ -354,10 +547,11 @@ SCFF Brief Section
 }
 
 .value-prop-img{
-    position: absolute;
+   position: relative;
     margin-top: -60px;
     z-index: -1;
     margin-left: -140px;
+    max-width: 100vw;
 }
 
 
@@ -387,23 +581,37 @@ Pitch Section
     padding-bottom: 10px;
 }
 
+
+
 /*
 
 Clients Section
 
 */
 
+@media screen and (max-width: 500px) {
+    
+.clients .container{
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+}
+
 .clients .container{
     text-align: center;
-    width: 50%;
-    padding-left: 120px;
-    padding-right: 120px;
+    width: 90%;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .clients .container h1{
     font-size: 16px;
     margin-bottom: 20px;
 }
+
+
 
 
 
